syntax = "proto3";
package babylon.btclightclient.v1;

import "gogoproto/gogo.proto";
import "babylon/btclightclient/btclightclient.proto";


option go_package = "github.com/babylonchain/babylon/x/btclightclient/types";

// Msg defines the Msg service.
service Msg {
  rpc InsertHeader(MsgInsertHeader) returns (MsgInsertHeaderResponse) {};
}

// MsgInsertHeader defines the message for incoming header bytes
message MsgInsertHeader {
  string signer = 1;
  bytes header = 2 [
    (gogoproto.customtype) = "github.com/babylonchain/babylon/types.BTCHeaderBytes"
  ];
}
message MsgInsertHeaderResponse {}
